# sparkit-science-py

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/sparkit_science/: __init__.py  _http.py  async_client.py  client.py  exceptions.py  models.py  webhook.py
tests/: conftest.py  test_client_async.py  test_client_sync.py  test_exceptions.py  test_integration.py  test_models.py  test_retries.py  test_webhook.py
