[build-system]
requires = ["setuptools>=68", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "sparkit-science"
description = "Python SDK for the SPARKIT scientific research API"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Jacob Steenwyk", email = "jlsteenwyk+sparkit@gmail.com" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27,<0.30",
    "pydantic>=2.5,<3",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://sparkit.science"
Documentation = "https://sparkit.science/docs"
Repository = "https://github.com/SPARKIT-science/sparkit-science-py"
Issues = "https://github.com/SPARKIT-science/sparkit-science-py/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "mypy>=1.10",
    "ruff>=0.5",
    "build>=1.2",
]

[tool.setuptools.dynamic]
version = { attr = "sparkit_science._version.__version__" }

[tool.setuptools.package-data]
sparkit_science = ["py.typed"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/sparkit_science"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "PT"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
